--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <!--not hold cache -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0"/>
-  <!-- command before release -->
-
-  <title>Alex Portfolio</title>
+  <title>AlexPortfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body style="background-color: rgb(218, 211, 211);">
+<body>
   <app-root></app-root>
 </body>
 </html>
